# social-network-engagement-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  supervisord.conf  test_main.http
app/: background_tasks.py  config.py  crud.py  models.py  schemas.py
app/connection/: database.py
app/mock/: mock_instagram_api.py  mock_telegram_api.py
app/utils/: instagram_client.py  telegram_bot.py
tests/: test_api.py
